kube/frontend.yaml

Should not be used. Now managed through FluxCD

kind: Service
apiVersion: v1
metadata:
  name: aaasf
  namespace: aaasf
  labels:
    k8s-app: aaasf
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s-app: aaasf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aaasf
  namespace: aaasf
  labels:
    k8s-app: aaasf
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - aaas.atlas-ml.org
      secretName: auto-generated-aaasf
  rules:
    - host: aaas.atlas-ml.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aaasf
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaasf
  namespace: aaasf
  labels:
    k8s-app: aaasf
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: aaasf
  template:
    metadata:
      labels:
        k8s-app: aaasf
    spec:
      containers:
        - name: aaasf
          image: ivukotic/aaasf:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 80
            periodSeconds: 60
            initialDelaySeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: settings-volume
              mountPath: "/etc/aaasf/"
              readOnly: true
      volumes:
        - name: settings-volume
          projected:
            sources:
              - secret:
                  name: globus-secret
              - secret:
                  name: config
              # - secret:
              #     name: mg-config
