kube/frontend_selfcert.yaml
kind: Service
apiVersion: v1
metadata:
  name: aaasf
  namespace: aaas
  labels:
    k8s-app: aaasf
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s-app: aaasf
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aaasf
  namespace: aaas
  labels:
    k8s-app: aaasf
  annotations:
    kubernetes.io/ingress.class: ilija
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - aaas.vukotic.me
      secretName: auto-generated-aaasf
  rules:
    - host: aaas.vukotic.me
      http:
        paths:
          - path: /
            backend:
              serviceName: aaasf
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaasf
  namespace: aaas
  labels:
    k8s-app: aaasf
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: aaasf
  template:
    metadata:
      labels:
        k8s-app: aaasf
    spec:
      containers:
        - name: aaasf
          image: ivukotic/aaasf:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 80
            periodSeconds: 60
            initialDelaySeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: settings-volume
              mountPath: "/etc/aaasf/"
              readOnly: true
      volumes:
        - name: settings-volume
          projected:
            sources:
              - secret:
                  name: globus-secret
              - secret:
                  name: config
              - secret:
                  name: mg-config
